--- a/css.css
+++ b/css.css
@@ -1,12 +1,16 @@
-.position {
-  position:absolute;
-  left:200px;
-  top: 400px;
-}
+
 .full-circle {
-    background-color:gray;
+    background-color:#D0D0D0 ;
     height:30px;
     width:30px;
     -webkit-border-radius:15px;
     -moz-border-radius:15px;
+}
+.full-circle:hover {
+    background-color:#B0B0B0;
+}
+
+.nodeText{
+    text-align: center;
+    vertical-align: center;
 }
